--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -1,5 +1,5 @@
 <!-- style.html -->
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+<link rel="stylesheet" href="static/assets/stylesheets/style.css"/>
 
 
 <!-- Fonts -->
