--- a/static/assets/stylesheets/style.css
+++ b/static/assets/stylesheets/style.css
@@ -114,3 +114,15 @@ img{
     from {opacity: .4}
     to {opacity: 1}
 }
+
+h4{
+    margin: 0.5rem 3px;
+}
+
+p{
+    margin: 0 3px 0.5rem;
+}
+
+hr{
+    margin: 0.5rem 0;
+}
