finished connect4 for now

--- a/templates/connect4.html
+++ b/templates/connect4.html
@@ -27,25 +27,29 @@
             <div class="horizontal-container">
                 <div class="horizontal">
                     <p>Amount of rows: </p>
-                    <input id="amount_of_rows" type="number" min="4">
+                    <input id="amount_of_rows" type="number" min="1">
                 </div>
                 <div class="horizontal">
                     <p>Amount of columns: </p>
-                <input id="amount_of_columns" type="number" min="4">
+                <input id="amount_of_columns" type="number" min="1">
                 </div>
                 <div class="horizontal">
                     <p>Amount of players (max 11): </p>
                 <input id="playerCount" type="number" min="1" max="11">
                 </div>
                 <div class="horizontal">
+                    <p>Win amount: </p>
+                    <input id="winAmount" type="number" min="1">
+                </div>
+                <div class="horizontal">
                     <input type="checkbox" name="horizontal-check" id="horizontal-check" checked>
                     <label for="horizontal-check">horizontal</label><br>
                     <input type="checkbox" name="vertical-check" id="vertical-check" checked>
                     <label for="vertical-check">vertical</label><br>
-                    <input type="checkbox" name="diagonal/-check" id="diagonal/-check" checked>
-                    <label for="diagonal/-check">diagonal /</label><br>
-                    <input type="checkbox" name="diagonal\-check" id="diagonal\-check" checked>
-                    <label for="diagonal\-check">diagonal\</label><br>
+                    <input type="checkbox" name="diagonal1-check" id="diagonal1-check" checked>
+                    <label for="diagonal1-check">primary diagonal \</label><br>
+                    <input type="checkbox" name="diagonal2-check" id="diagonal2-check" checked>
+                    <label for="diagonal2-check">secondary diagonal /</label><br>
                 </div>
             </div>
             <hr>
@@ -66,19 +70,11 @@
                     <div id="notifications"></div>
                 </div>
                 <div class="horizontal">
-                    <button onclick="changeBoardSize()">Large board</button>
+                    <button onclick="changeBoardSize()">Toggle board size</button>
                 </div>
             </div>
 
             <hr>
-
-            <p>TODO</p>
-            <p>
-                - Make line check toggles functional<br>
-                - Add option for increasing win amount (x in a row instead of 4)<br>
-                - Add option to enable/disable horizontal/vertical/diagonal wins<br>
-                - Add option to enable disjointed rows (highly customizable, keep easy to understand?)
-            </p>
 
         </div>
     </div>
