--- a/templates/connect4.html
+++ b/templates/connect4.html
@@ -53,7 +53,9 @@
                 </div>
                 <div class="horizontal">
                     <input type="checkbox" name="torus-check" id="torus-check">
-                    <label for="torus-check">Allow wrap around: </label><br>
+                    <label for="torus-check">Allow wrap around</label><br>
+                    <input type="checkbox" name="gravity-check" id="gravity-check" checked>
+                    <label for="gravity-check">Enable gravity</label><br>
                 </div>
             </div>
             <hr>
@@ -77,8 +79,46 @@
                     <button onclick="changeBoardSize()">Toggle board size</button>
                 </div>
             </div>
-
             <hr>
+
+            <!-- Rules/explanation -->
+            <div>
+                <h4>Connect 4</h4>
+                <p>
+                    Connect 4 is a 2 player game where players alternate in sliding a coin into a grid. The first player to get 4 coins in a row of their own color wins. This game is quite simple, and therefore not too interesting (it has been solved for years; player 1 always wins when playing optimally).<br>
+                    To spice things up, you can play around with the game options found above. These are the options currently available:
+                </p>
+                <ul>
+                    <li><p>
+                        <b>No. rows / No. columns</b><br>
+                        This option changes the size of the board. The board is programmed to always try to be 1200 pixels wide, but if this is too little, you can use the <i>Toggle board size</i> button to make it fill as much room as possible.
+                    </p></li>
+                    <li><p>
+                        <b>No. players</b><br>
+                        How many people are playing? This can range from 1 to 11. Why 11? Because I only picked 11 colors for the coins. If you want to play with even more players let me know, I'll simply add a lot more colors if that's the case.
+                    </p></li>
+                    <li><p>
+                        <b>Win amount</b><br>
+                        This option changes how many consecutive coins are needed to win. The default is 4, but any positive value is allowed here (yes, even 1).
+                    </p></li>
+                    <li><p>
+                        <b>Direction toggles</b><br>
+                        These 4 checkboxes can be used to enable/disable winning in a certain direction. For example, if only horizontal is checked, you can only win with a horizontal row of coins. Getting 4 in a row in any other direction won't do anything.
+                    </p></li>
+                    <li><p>
+                        <b>Allow wrap around</b><br>
+                        Enabling this makes the board work as a torus. This means that opposing edges are connected. Imagine wrapping the board around a cilinder, so the leftmost and rightmost columns touch. You could also imagine a copy of the board being placed all around the board, and you can get 4 in a row by using the coins in a neighbouring board.<br>
+                        More specifically, a horizontal line continues on the other side in the same row, a vertical line continues in the same column. Diagonal lines continue one row/column along from the previous coin, and thus do not immediately wrap on themselves.
+                    </p></li>
+                    <li><p>
+                        <b>Enable gravity</b><br>
+                        Normally, a coin can only be placed in the bottommost empty slot of each column. Disabling gravity is like placing the board flat on the ground, you can now put coins in every empty slot. Combining this with allowing wrap around wins and multiple players makes for some interesting games!
+                    </p></li>
+                </ul>
+                <p>
+                    If you find any bugs or unexpected behavior, please contact me on discord, my username is Andy_Go#1068. Feedback, questions and suggestions for new options, games, gamemodes are also always welcome.
+                </p>
+            </div>
 
         </div>
     </div>
