wordle html template, tweaks

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -14,8 +14,8 @@
             <h1>Frequently asked questions</h1>
 
             <h4>Why is the website named "Lekkerveld"?</h4>
-            <p>It's an inside joke.<br>
-                My student dorm is called <i>Lerkeveld</i>. It's quite large, and we even had things like Lerkeveld hoodies. One day, a friend of mine at uni points at my hoodie and asks "What's Lekkerveld?". We've referred to it as Lekkerveld ever since.
+            <p>
+                It's an inside joke.
             </p>
 
             <h4>Beep Boop</h4>
