--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,6 +1,7 @@
 <nav id="navbar">
     <a href="/" id="logo"><img src="{{ url_for('static', filename='assets/logo.png') }}"></a>
     <ul id="nav-table">
-        <li class="nav-table-element"><a class="nav-anchor" href="/connect4"><span>Connect 4</span></a></li>
+        <li class="nav-table-element"><a class="nav-anchor" href="/connect4"><span>Connect 4 Xtreme</span></a></li>
+        <li class="nav-table-element"><a class="nav-anchor" href="/unfair-wordle"><span>Unfair Wordle</span></a></li>
     </ul>
 </nav>
