--- a/templates/faq.html
+++ b/templates/faq.html
@@ -3,7 +3,7 @@
 <head>
     {% include 'includes/head.html' %}
 
-    <title>FAQ</title>
+    <title> Lekkerveld FAQ</title>
 </head>
 
 <body>
@@ -20,9 +20,9 @@
 
             <h4>Beep Boop</h4>
             <p>This is a template answer.</p>
+
+            {% include 'includes/footer.html' %}
         </div>
     </div>
-
-    {% include 'includes/footer.html' %}
 </body>
 </html>
