--- a/templates/bingo-card.html
+++ b/templates/bingo-card.html
@@ -3,7 +3,7 @@
 <head>
     {% include 'includes/head.html' %}
 
-    <title>Bingo card</title>
+    <title>Bingo card generator</title>
 </head>
 
 <body>
@@ -28,9 +28,8 @@
 
             <p><i>This is a Work in Progress, come back when I have finished this!</i></p>
 
+            {% include 'includes/footer.html' %}
         </div>
     </div>
-
-    {% include 'includes/footer.html' %}
 </body>
 </html>
