--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,1 +1,4 @@
+<hr>
+<p>If you find any bugs or unexpected behavior, please contact me via the <a href="/contact">contact form</a> or on discord, my username is Andy_Go#1068. Feedback, questions and suggestions for new options, games, or gamemodes are also always welcome.</p>
+
 <div style="height: 3rem;"></div>
