--- a/templates/unfair-wordle.html
+++ b/templates/unfair-wordle.html
@@ -13,6 +13,11 @@
 
     <div id="page-container"> 
         <div id="page-content">
+
+            <div id="notifications" style="display: none">
+                <p>sample text</p>
+            </div>
+
             <h1>Unfair Wordle</h1>
 
             <div id="game_field">
@@ -20,16 +25,19 @@
             </div>
 
             <div id="keyboard">
-                <!-- keyboard -->
+                <!-- TODO -->
             </div>
+            <hr>
 
             <div id="rules">
-                <!-- rules -->
+                <h4>The concept</h4>
+                <p>
+                    Unfair Wordle is just like regular Wordle, except it feels a bit... unfair. Every time you guess, the game chooses a different answer, in such a way that you still have a lot of possibilities left. Luckily, the new answer still follows the coloring of previous guesses, so eventually you have so much information that there is one answer left, so it cannot change anymore.<br>
+                    The word list and the answer list are the same as regular wordle, although around 200 words were removed from the answer list as they were deemed too obscure.
+                </p>
             </div>
-
+            {% include 'includes/footer.html' %}
         </div>
     </div>
-
-    {% include 'includes/footer.html' %}
 </body>
 </html>
