--- a/static/assets/stylesheets/wordle.css
+++ b/static/assets/stylesheets/wordle.css
@@ -1,8 +1,8 @@
 td{
-    height: 6rem;
-    width: 6rem;
-    border: 5px solid gray;
-    font-size: 3rem;
+    height: 4rem;
+    width: 4rem;
+    border: 4px solid gray;
+    font-size: 2rem;
     font-weight: 900;
 }
 
@@ -30,4 +30,19 @@ td p{
     color: #f6f6f6;
     padding: 2rem;
     font-size: larger;
+}
+
+button:not(#reset){
+    min-width: fit-content;
+    width: 3rem;
+    height: 4rem;
+    font-size: 1rem;
+    font-weight: bolder;
+    margin: 0.5rem 0.2rem 0 0;
+}
+
+#keyboard{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
