--- a/templates/unfair-wordle.html
+++ b/templates/unfair-wordle.html
@@ -56,7 +56,7 @@
                     <button id="l">L</button>
                 </div>
                 <div class="third-row">
-                    <button id="del">DEL</button>
+                    <button id="Backspace">BACKSPACE</button>
                     <button id="z">Z</button>
                     <button id="x">X</button>
                     <button id="c">C</button>
@@ -64,7 +64,7 @@
                     <button id="b">B</button>
                     <button id="n">N</button>
                     <button id="m">M</button>
-                    <button id="enter">ENTER</button>
+                    <button id="Enter">ENTER</button>
                 </div>
             </div>
             <hr>
