fixed wordle bugs, added emoji result copying

--- a/templates/unfair-wordle.html
+++ b/templates/unfair-wordle.html
@@ -20,7 +20,7 @@
 
             <div class="horizontal-container">
                 <div class="horizontal">
-                    <button id="reset" onclick="reset()">Reset game</button>
+                    <button id="reset" onclick="reset()" onkeydown="notify('entered')">Reset game</button>
                 </div>
                 <div class="horizontal">
                     <p id="timer">00:00</p>
