--- a/static/assets/stylesheets/wordle.css
+++ b/static/assets/stylesheets/wordle.css
@@ -18,20 +18,6 @@ td p{
     justify-content: center;
 }
 
-#notifications{
-    width: fit-content;
-    height: fit-content;
-    position: absolute;
-    background-color: #505050;
-    border-radius: 1rem;
-}
-
-#notifications p{
-    color: #f6f6f6;
-    padding: 2rem;
-    font-size: larger;
-}
-
 button:not(#reset){
     min-width: fit-content;
     width: 3rem;
@@ -39,6 +25,28 @@ button:not(#reset){
     font-size: 1rem;
     font-weight: bolder;
     margin: 0.5rem 0.2rem 0 0;
+}
+
+#notifications{
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    background-color: #505050;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#notifications button{
+    padding: 1rem;
+    margin: 0 1rem 0 0;
+}
+
+#notifications p{
+    color: #f6f6f6;
+    padding: 2rem;
+    font-size: larger;
 }
 
 #keyboard{
