small improvements, timer is bugged

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -1,5 +1,6 @@
 <!-- style.html -->
 <link rel="stylesheet" href="static/assets/stylesheets/style.css"/>
+<script type="text/javascript" src="static/assets/scripts/global.js"></script>
 
 
 <!-- Fonts -->
