--- a/templates/unfair-wordle.html
+++ b/templates/unfair-wordle.html
@@ -20,10 +20,10 @@
 
             <div class="horizontal-container">
                 <div class="horizontal">
-                    <button id="reset" onclick="reset()" onkeydown="notify('entered')">Reset game</button>
+                    <button id="reset" onclick="reset()">Reset game</button>
                 </div>
                 <div class="horizontal">
-                    <p id="timer">00:00</p>
+                    <div id="timer">00:00</div>
                 </div>
             </div>
 
@@ -33,38 +33,38 @@
 
             <div id="keyboard">
                 <div class="first-row">
-                    <button id="q">Q</button>
-                    <button id="w">W</button>
-                    <button id="e">E</button>
-                    <button id="r">R</button>
-                    <button id="t">T</button>
-                    <button id="y">Y</button>
-                    <button id="u">U</button>
-                    <button id="i">I</button>
-                    <button id="o">O</button>
-                    <button id="p">P</button>
+                    <button class="key" id="q">Q</button>
+                    <button class="key" id="w">W</button>
+                    <button class="key" id="e">E</button>
+                    <button class="key" id="r">R</button>
+                    <button class="key" id="t">T</button>
+                    <button class="key" id="y">Y</button>
+                    <button class="key" id="u">U</button>
+                    <button class="key" id="i">I</button>
+                    <button class="key" id="o">O</button>
+                    <button class="key" id="p">P</button>
                 </div>
                 <div class="second-row">
-                    <button id="a">A</button>
-                    <button id="s">S</button>
-                    <button id="d">D</button>
-                    <button id="f">F</button>
-                    <button id="g">G</button>
-                    <button id="h">H</button>
-                    <button id="j">J</button>
-                    <button id="k">K</button>
-                    <button id="l">L</button>
+                    <button class="key" id="a">A</button>
+                    <button class="key" id="s">S</button>
+                    <button class="key" id="d">D</button>
+                    <button class="key" id="f">F</button>
+                    <button class="key" id="g">G</button>
+                    <button class="key" id="h">H</button>
+                    <button class="key" id="j">J</button>
+                    <button class="key" id="k">K</button>
+                    <button class="key" id="l">L</button>
                 </div>
                 <div class="third-row">
-                    <button id="Backspace">BACKSPACE</button>
-                    <button id="z">Z</button>
-                    <button id="x">X</button>
-                    <button id="c">C</button>
-                    <button id="v">V</button>
-                    <button id="b">B</button>
-                    <button id="n">N</button>
-                    <button id="m">M</button>
-                    <button id="Enter">ENTER</button>
+                    <button class="key" id="Backspace">BACKSPACE</button>
+                    <button class="key" id="z">Z</button>
+                    <button class="key" id="x">X</button>
+                    <button class="key" id="c">C</button>
+                    <button class="key" id="v">V</button>
+                    <button class="key" id="b">B</button>
+                    <button class="key" id="n">N</button>
+                    <button class="key" id="m">M</button>
+                    <button class="key" id="Enter">ENTER</button>
                 </div>
             </div>
             <hr>
