implemented mass change, fixed bugs

--- a/templates/includes/bingo-options.html
+++ b/templates/includes/bingo-options.html
@@ -1,4 +1,4 @@
-<select name="dexNo">
+<select name="dexNo" class="dexNo">
     <option value="random">Random</option>
     <option value="free">Free space</option>
     <option value="1">Bulbasaur</option>
@@ -652,7 +652,7 @@
     <option value="649">Genesect</option>
 </select>
 
-<select name="game">
+<select name="game" class="game">
     <option value="random">random</option>
     <option value="gold">gold</option>
     <option value="silver">silver</option>
@@ -665,12 +665,12 @@
     <option value="heartgold-soulsilver">heartgold-soulsilver</option>
     <option value="black-white">black-white</option>
 </select>
-<select name="isShiny">
+<select name="isShiny" class="isShiny">
     <option value="random">random</option>
     <option value="normal" selected>normal</option>
     <option value="shiny">shiny</option>
 </select>
-<select name="isCompleted">
+<select name="isCompleted" class="isCompleted">
     <option value="random">random</option>
     <option value="incompleted" selected>incompleted</option>
     <option value="completed">completed</option>
