--- a/templates/pokemon-bingo-generator.html
+++ b/templates/pokemon-bingo-generator.html
@@ -46,9 +46,11 @@
                     <li>Is the Pokemon shiny or not?</li>
                     <li>Is the Pokemon completed or not?</li>
                 </ul>
-                If the game has no sprite for the chosen Pokemon, the Pokemon is rerolled. This is to ensure that if a random Pokemon is incompatible with a chosen game, the game stays the same. If a random game clashes with a chosen Pokemon, the Pokemon will be rerolled, so watch out when picking a random game.<br>
-                The randomizer checks for duplicate Pokemon, but other forms are seen as other Pokemon. Shiny/non-shiny is considered the same Pokemon. Additionally, the randomizer will not choose different forms.<br>
-                To download the generated slideshow, use "right-click > save image as...". 
+                If a random game has no sprite for the chosen Pokemon, the game is rerolled. Similarly, if a Pokemon has no sprite in a chosen game, the Pokemon will be rerolled. If an incompatible Pokemon/game pair is inputted, the game is randomized.<br>
+                The randomizer checks for duplicate Pokemon*, but other forms are seen as other Pokemon. Shiny/non-shiny is considered the same Pokemon. Additionally, the randomizer will not choose different forms.<br>
+                To download the generated slideshow, use "right-click > save image as...". <br>
+                <br>
+                * The dupe check checks only up until that square, so if a later square has a chosen pokemon, it might take the same one there.
             </p>
 
             <hr>
